--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "firebase": "^8.2.1",
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "react-native-dotenv": "^2.5.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.10",
